[gd_scene load_steps=35 format=3 uid="uid://boah54pyxbkid"]

[ext_resource type="Script" uid="uid://cbe4rsjm6iu6u" path="res://main.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://sqo0wk0jqq47" path="res://turtle.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://dbwpu5n2shn1r" path="res://cropped_wash.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bt578osherypc" path="res://wash_off.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c74a0i51p62o5" path="res://pet_on.png" id="5"]
[ext_resource type="Texture2D" uid="uid://l6cs5aond0yi" path="res://pet_off.png" id="6"]
[ext_resource type="Texture2D" uid="uid://75bglh8gl1oh" path="res://feed_on.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b1usvlvuehf45" path="res://feed_off.png" id="8"]
[ext_resource type="Texture2D" uid="uid://dfvnqa8x4730i" path="res://assets/Art Assets/Eat Elements/carrot1.png" id="9"]
[ext_resource type="Texture2D" uid="uid://coykhnqmejf21" path="res://assets/Art Assets/Eat Elements/carrot2.png" id="10"]
[ext_resource type="Texture2D" uid="uid://lmammxl3beox" path="res://assets/Art Assets/Eat Elements/carrot3.png" id="11"]
[ext_resource type="Texture2D" uid="uid://8r54stxkcwxs" path="res://assets/Art Assets/Pet Elements/pet1.png" id="12"]
[ext_resource type="Texture2D" uid="uid://vbjr1e3eenw0" path="res://assets/Art Assets/Pet Elements/pet2.png" id="13"]
[ext_resource type="Texture2D" uid="uid://xhmsqj1aewvn" path="res://assets/Art Assets/Wash Elements/Wash1.png" id="14"]
[ext_resource type="Texture2D" uid="uid://c18qkorg8x1go" path="res://assets/Art Assets/Wash Elements/wash2.png" id="15"]
[ext_resource type="Texture2D" uid="uid://bartva5ndwlf8" path="res://assets/Art Assets/Wash Elements/wash3.png" id="16"]
[ext_resource type="Texture2D" uid="uid://003jdveu2di" path="res://assets/Art Assets/Wash Elements/sparkle1.png" id="17"]
[ext_resource type="Texture2D" uid="uid://bhpqsv65yqhqa" path="res://assets/Art Assets/Wash Elements/sparkle2.png" id="18"]
[ext_resource type="Texture2D" uid="uid://hgw02q5a6843" path="res://assets/Art Assets/Wash Elements/sparkle3.png" id="19"]
[ext_resource type="Texture2D" uid="uid://cm8h722yykjet" path="res://assets/Art Assets/Thought Bubbles/thought_bubble_feed.png" id="20"]
[ext_resource type="Texture2D" uid="uid://vxei3ciowgcp" path="res://assets/Art Assets/Thought Bubbles/thought_bubble_pet.png" id="21"]
[ext_resource type="Texture2D" uid="uid://cgu73dwy1gek7" path="res://assets/Art Assets/Thought Bubbles/thought_bubble_wash.png" id="22"]
[ext_resource type="Texture2D" uid="uid://b43mbk6wcamk" path="res://assets/Art Assets/UI/pocket_turtle_title.png" id="23"]
[ext_resource type="AudioStream" uid="uid://boano0gnt6pui" path="res://assets/SFX/Food Crunch 1.mp3" id="24"]
[ext_resource type="AudioStream" uid="uid://bigv1xhahlgff" path="res://assets/SFX/Food Crunch 2.mp3" id="25"]
[ext_resource type="AudioStream" uid="uid://b5facv3t6h0nn" path="res://assets/SFX/Scrubbing.mp3" id="26"]
[ext_resource type="AudioStream" uid="uid://psyyn6mxt5r" path="res://assets/SFX/All Clean.mp3" id="27"]
[ext_resource type="AudioStream" uid="uid://di14xhpmvf6vg" path="res://assets/SFX/Petting.mp3" id="28"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kq58d"]
atlas = ExtResource("4")
region = Rect2(237, 273, 79, 91)

[sub_resource type="SpriteFrames" id="SpriteFrames_seu75"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}, {
"duration": 1.0,
"texture": ExtResource("9")
}, {
"duration": 1.0,
"texture": ExtResource("10")
}, {
"duration": 1.0,
"texture": ExtResource("11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kq58d")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_htxhm"]
atlas = ExtResource("3")
region = Rect2(225, 294, 75, 98)

[sub_resource type="SpriteFrames" id="SpriteFrames_jq2sk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}, {
"duration": 1.0,
"texture": ExtResource("12")
}, {
"duration": 1.0,
"texture": ExtResource("13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxhm")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4k2k6"]
atlas = ExtResource("4")
region = Rect2(237, 273, 79, 91)

[sub_resource type="SpriteFrames" id="SpriteFrames_0rl1p"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}, {
"duration": 1.0,
"texture": ExtResource("14")
}, {
"duration": 1.0,
"texture": ExtResource("15")
}, {
"duration": 1.0,
"texture": ExtResource("16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}, {
"duration": 1.0,
"texture": ExtResource("17")
}, {
"duration": 1.0,
"texture": ExtResource("18")
}, {
"duration": 1.0,
"texture": ExtResource("19")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4k2k6")
}],
"loop": false,
"name": &"sparkles",
"speed": 5.0
}]

[node name="main" type="Node2D"]
script = ExtResource("1")

[node name="turtle" parent="." instance=ExtResource("2")]
passing_seconds = 6.0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.15, 0.15)

[node name="wash_button" type="TextureButton" parent="."]
offset_left = -423.0
offset_top = 411.0
offset_right = -122.0
offset_bottom = 803.0
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_disabled = ExtResource("4")

[node name="pet_button" type="TextureButton" parent="."]
offset_left = -150.0
offset_top = 421.0
offset_right = 151.0
offset_bottom = 813.0
texture_normal = ExtResource("5")
texture_pressed = ExtResource("6")
texture_disabled = ExtResource("6")

[node name="feed_button" type="TextureButton" parent="."]
offset_left = 111.0
offset_top = 424.0
offset_right = 412.0
offset_bottom = 816.0
texture_normal = ExtResource("7")
texture_pressed = ExtResource("8")
texture_disabled = ExtResource("8")

[node name="eating" type="AnimatedSprite2D" parent="."]
position = Vector2(-11, -11)
sprite_frames = SubResource("SpriteFrames_seu75")

[node name="petting" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jq2sk")

[node name="washing" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0rl1p")
animation = &"sparkles"

[node name="ThoughtBubbleFeed" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("20")

[node name="ThoughtBubblePet" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("21")

[node name="ThoughtBubbleWash" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("22")

[node name="thought_bubble" type="Timer" parent="."]

[node name="title_screen" type="Timer" parent="."]

[node name="PocketTurtleTitle" type="Sprite2D" parent="."]
texture = ExtResource("23")

[node name="fed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24")

[node name="all_fed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25")

[node name="clean" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("26")

[node name="all_clean" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("27")

[node name="pet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("28")

[connection signal="born" from="turtle" to="." method="_on_turtle_born"]
[connection signal="died" from="turtle" to="." method="_on_turtle_died"]
[connection signal="pressed" from="wash_button" to="." method="_on_wash_button_pressed"]
[connection signal="pressed" from="pet_button" to="." method="_on_pet_button_pressed"]
[connection signal="pressed" from="feed_button" to="." method="_on_feed_button_pressed"]
[connection signal="timeout" from="thought_bubble" to="." method="_on_thought_bubble_timeout"]
[connection signal="timeout" from="title_screen" to="." method="_on_title_screen_timeout"]
